--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-
+import Layout from '../layouts/Layout.astro'
+import Chart from '../components/Chart.vue'
+import { dateStart, dateEnd, months } from '../data/chart-config.json'
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout
+	title="Growth of a Movement: The BDS campaign for Palestinian justice"
+	description="Explore the actions that have shaped the Palestinian-led Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality."
+>
+	<div class="bg-black text-white">
+		<h1 class="text-3xl font-bold text-red">Growth of a Movement</h1>
+		<Chart
+			dateStart={dateStart}
+			dateEnd={dateEnd}
+			months={months}
+		/>
+	</div>
+</Layout>
