--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import { dateStart, dateEnd, months } from '../data/chart-config.json'
 <Layout
 	title="Growth of a Movement: The BDS campaign for Palestinian justice"
 	description="Explore the actions that have shaped the Palestinian-led Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality."
+	currentUrl="/"
+	bgColor="black"
 >
 	<div class="bg-black text-white">
 		<h1 class="text-3xl font-bold text-red">Growth of a Movement</h1>
@@ -15,5 +17,38 @@ import { dateStart, dateEnd, months } from '../data/chart-config.json'
 			dateEnd={dateEnd}
 			months={months}
 		/>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
+		<p>1234</p>
 	</div>
 </Layout>
