Add year ticks to chart

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,11 @@ import { dateStart, dateEnd, months } from '../data/chart-config.json'
 	bgColor="black"
 >
 	<div class="bg-black text-white">
-		<h1 class="text-3xl font-bold text-red">Growth of a Movement</h1>
 		<Chart
 			dateStart={dateStart}
 			dateEnd={dateEnd}
 			months={months}
+			showAllYears={false}
 		/>
 		<p>1234</p>
 		<p>1234</p>
