--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro'
 import Chart from '../components/Chart.vue'
 import { dateStart, dateEnd, months } from '../data/chart-config.json'
+import stories from '../data/stories'
+import IconRadioButtonChecked from '../images/icon-radio-button-checked.svg'
 ---
 
 <Layout
@@ -11,44 +13,76 @@ import { dateStart, dateEnd, months } from '../data/chart-config.json'
 	bgColor="black"
 >
 	<div class="bg-black text-white">
-		<Chart
-			dateStart={dateStart}
-			dateEnd={dateEnd}
-			months={months}
-			showAllYears={false}
-		/>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
+		<div
+			class={`
+				h-32
+				md:h-48
+				lg:h-64
+				2xl:h-80
+				3xl:h-96
+			`}
+		>
+			<Chart
+				dateStart={dateStart}
+				dateEnd={dateEnd}
+				months={months}
+				showAllYears={false}
+			/>
+		</div>
+		<section
+			class="
+				mt-4
+				p-4
+				flex
+				flex-col
+				gap-8
+				max-w-6xl
+				mx-auto
+				md:p-12
+				lg:grid
+				lg:grid-cols-12
+				xl:gap-16
+			"
+		>
+			<div class="lg:col-span-6 xl:col-span-5">
+				<h1 class="sr-only">
+					Growth of a Movement
+				</h1>
+				<p class="text-xl leading-relaxed">Explore the actions that have shaped the Palestinian-led, global Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality.</p>
+			</div>
+			<div
+				class="
+					flex
+					flex-col
+					gap-4
+					lg:col-span-6
+					xl:col-span-7
+				"
+			>
+				{stories.map(({prefix, title, url}) => (
+					<a
+						href={url}
+						class="
+							flex
+							items-center
+							gap-3
+							p-3
+							border-2
+							hover:text-yellow
+						"
+					>
+						<IconRadioButtonChecked class="w-8 h-8" aria-hidden="true" />
+						<div class="flex flex-col">
+							<span class="text-sm leading-tight uppercase">
+								{prefix}
+							</span>
+							<span class="text-2xl leading-tight font-black">
+								{title}
+							</span>
+						</div>
+					</a>
+				))}
+			</div>
+		</section>
 	</div>
 </Layout>
