--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,11 @@ import IconRadioButtonChecked from '../images/icon-radio-button-checked.svg'
 	currentUrl="/"
 	bgColor="black"
 >
-	<div class="bg-black text-white">
+	<div class="bg-black text-white pt-(--header-height)">
 		<div
 			class={`
 				h-32
+				sm:h-40
 				md:h-48
 				lg:h-64
 				2xl:h-80
