Refactor: move hex coordinate to pre-compilation script

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -16,6 +16,11 @@
 }
 
 :root {
+  --color-chart: var(--color-red);
+  --color-chart-dim: var(--color-red-dark);
+  --color-chart-feature: var(--color-white);
+  --color-chart-feature-outline: var(--color-yellow);
+
   --header-height: 4rem;
 }
 
