--- a/src/css/global.css
+++ b/src/css/global.css
@@ -18,7 +18,7 @@
 :root {
   --color-chart: var(--color-red);
   --color-chart-dim: var(--color-red-dark);
-  --color-chart-feature: var(--color-white);
+  --color-chart-feature: var(--color-black);
   --color-chart-feature-outline: var(--color-yellow);
 
   --header-height: 4rem;
