Add support for Effra font

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -12,6 +12,7 @@
 
   --breakpoint-3xl: 120rem;
 
+  --font-sans: "effra-cc-variable", sans-serif;
   --font-mono: "JetBrains Mono", monospace;
 }
 
