--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,8 +41,23 @@ const nav = [
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
 		<style>
-			/* latin-ext */
+			/* effra normal */
+			@font-face {
+				font-family:"effra-cc-variable";
+				src:url("https://use.typekit.net/af/767fb1/0000000000000000774bfc0c/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/767fb1/0000000000000000774bfc0c/31/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/767fb1/0000000000000000774bfc0c/31/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+				font-display:auto;font-style:normal;font-weight:100 900;font-stretch:normal;
+			}
+
+			/* effra italic */
+			@font-face {
+				font-family:"effra-cc-variable";
+				src:url("https://use.typekit.net/af/4238d5/0000000000000000774bfc0d/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff2"),url("https://use.typekit.net/af/4238d5/0000000000000000774bfc0d/31/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff"),url("https://use.typekit.net/af/4238d5/0000000000000000774bfc0d/31/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("opentype");
+				font-display:auto;font-style:italic;font-weight:100 900;font-stretch:normal;
+			}
+
+			/* jetbrainsmono latin-ext */
 			@font-face {
 				font-family: 'JetBrains Mono';
 				font-style: italic;
@@ -51,7 +66,7 @@ const nav = [
 				src: url(/fonts/jetbrainsmono-latin-ext.woff2) format('woff2');
 				unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 			}
-			/* latin */
+			/* jetbrainsmono latin */
 			@font-face {
 				font-family: 'JetBrains Mono';
 				font-style: italic;
@@ -60,7 +75,7 @@ const nav = [
 				src: url(/fonts/jetbrainsmono-latin.woff2) format('woff2');
 				unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 			}
-			/* latin-ext */
+			/* jetbrainsmono latin-ext */
 			@font-face {
 				font-family: 'JetBrains Mono';
 				font-style: normal;
@@ -69,7 +84,7 @@ const nav = [
 				src: url(https://fonts.gstatic.com/s/jetbrainsmono/v23/tDbV2o-flEEny0FZhsfKu5WU4xD1OwG_TA.woff2) format('woff2');
 				unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 			}
-			/* latin */
+			/* jetbrainsmono latin */
 			@font-face {
 				font-family: 'JetBrains Mono';
 				font-style: normal;
