--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -97,19 +97,45 @@ const conclusion = await marked.parse(story.data.conclusion)
   >
     <h1
       class="
-        grid
-        grid-cols-12
         p-4
         bg-grey-dark
-        sm:py-8
-        xl:px-8
+        sm:py-6
+        xl:px-16
+        xl:grid
+        xl:grid-cols-12
+        3xl:py-12
       "
     >
-      <div class="col-span-9 flex flex-col">
-        <span class="sr-only 2xl:not-sr-only text-sm leading-tight uppercase">
+      <div
+        class="
+          flex
+          flex-col
+          xl:col-span-9
+        "
+      >
+        <span
+          class="
+            sr-only
+            text-sm
+            font-medium
+            uppercase
+            xl:not-sr-only
+            3xl:text-lg
+            3xl:leading-3
+          "
+        >
           {story.data.prefix}
         </span>
-        <span class="text-2xl leading-tight font-black">
+        <span
+          class="
+            text-2xl
+            leading-tight
+            font-extrabold
+            uppercase
+            xl:text-3xl
+            3xl:text-4xl
+          "
+        >
           {story.data.title}
         </span>
       </div>
