--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
+import { getCollection } from "astro:content"
 import Layout from '../layouts/Layout.astro'
 import Chart from '../components/Chart.vue'
 import { columns, data, rows, ticks } from '../data/chart-config.json'
-import stories from '../data/stories'
 import IconRadioButtonChecked from '../images/icon-radio-button-checked.svg'
+
+const stories = (await getCollection('stories'))
+	.sort((a, b) => a.data.order - b.data.order)
 ---
 
 <Layout
@@ -67,9 +70,9 @@ import IconRadioButtonChecked from '../images/icon-radio-button-checked.svg'
 					xl:col-span-7
 				"
 			>
-				{stories.map(({prefix, title, url}) => (
+				{stories.map(story => (
 					<a
-						href={url}
+						href={`/${story.id}`}
 						class="
 							flex
 							items-center
@@ -82,10 +85,10 @@ import IconRadioButtonChecked from '../images/icon-radio-button-checked.svg'
 						<IconRadioButtonChecked class="w-8 h-8" aria-hidden="true" />
 						<div class="flex flex-col">
 							<span class="text-sm leading-tight uppercase">
-								{prefix}
+								{story.data.prefix}
 							</span>
 							<span class="text-2xl leading-tight font-black">
-								{title}
+								{story.data.title}
 							</span>
 						</div>
 					</a>
