--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const stories = await astroGetSortedStories()
 			`}
 		>
 			<Chart
-				client:load
+				client:only="vue"
 				columns={columns}
 				datasets={[
 					{
