--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const stories = await astroGetSortedStories()
 	currentUrl="/"
 	bgColor="black"
 >
-	<div class="bg-black text-white pt-(--header-height)">
+	<div class="bg-black text-white">
 		<div
 			class={`
 				h-32
