--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -23,18 +23,6 @@ const { story } = Astro.props
 const { nextStory, lastStory } = await astroGetAdjacentStories(story.id)
 const homeTitle = 'All Stories'
 
-const formatDate = (str: string) => {
-  return (new Date(str))
-    .toLocaleDateString(
-      'en-US',
-      {
-        year: 'numeric',
-        month: 'long',
-        day: 'numeric',
-      }
-    )
-}
-
 const storyEvents : StoryEvent[] = story.data.events
   .map(storyEvent => {
     const event = events.find(e => e.id === storyEvent.id)
@@ -60,7 +48,7 @@ const storyEvents : StoryEvent[] = story.data.events
       }
     }
     return {
-      date: formatDate(event.date),
+      date: event.dateFormatted,
       headline: event.headline,
       summary: event.summary,
       x: event.x,
@@ -92,7 +80,6 @@ const conclusion = await marked.parse(story.data.conclusion)
 	<div class="
       h-screen
       h-svh
-      pt-(--header-height)
       flex
       flex-col
       bg-black
