Add: open/close filters panel

--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -9,7 +9,7 @@ import { columns, rows, ticks } from '../data/chart-config.json'
 	title="All Data | Growth of a Movement: The BDS campaign for Palestinian justice"
 	description="Search, filter and analyze all events in our dataset on the growth of the Boycott, Divestment, and Sanctions (BDS) movement for Palestinian justice."
 	currentUrl="/data"
-	bgColor="white"
+	bgColor="black"
 >
 	<h1 class="sr-only">Full Dataset</h1>
 	<AppData
