--- a/src/css/global.css
+++ b/src/css/global.css
@@ -12,7 +12,7 @@
 
   --breakpoint-3xl: 120rem;
 
-  --font-sans: "effra-cc-variable", sans-serif;
+  --font-sans: "effra", sans-serif;
   --font-mono: "JetBrains Mono", monospace;
 }
 
