--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,22 +41,10 @@ const nav = [
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<link rel="preconnect" href="https://use.typekit.net">
+		<link href="https://use.typekit.net/sre8kmx.css" rel="stylesheet">
 
 		<style>
-			/* effra normal */
-			@font-face {
-				font-family:"effra-cc-variable";
-				src:url("https://use.typekit.net/af/767fb1/0000000000000000774bfc0c/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/767fb1/0000000000000000774bfc0c/31/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/767fb1/0000000000000000774bfc0c/31/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
-				font-display:auto;font-style:normal;font-weight:100 900;font-stretch:normal;
-			}
-
-			/* effra italic */
-			@font-face {
-				font-family:"effra-cc-variable";
-				src:url("https://use.typekit.net/af/4238d5/0000000000000000774bfc0d/31/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff2"),url("https://use.typekit.net/af/4238d5/0000000000000000774bfc0d/31/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff"),url("https://use.typekit.net/af/4238d5/0000000000000000774bfc0d/31/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("opentype");
-				font-display:auto;font-style:italic;font-weight:100 900;font-stretch:normal;
-			}
-
 			/* jetbrainsmono latin-ext */
 			@font-face {
 				font-family: 'JetBrains Mono';
