Add: alert when no events found matching filters

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,6 +5,7 @@
   --color-black: #000;
   --color-white: #fff;
   --color-grey-dark: #222;
+  --color-red-light: #FFE9E9;
   --color-red: #FF7474;
   --color-red-bright: #FF1E1E;
   --color-red-dark: #4E2929;
