--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -21,6 +21,7 @@ const lastDate = events[events.length - 1].date
 		chartRows={rows}
 		chartTicks={ticks}
 		filters={filters}
+		firstDate="2005-01-01"
 		lastDate={lastDate}
 	/>
 </Layout>
