--- a/src/css/global.css
+++ b/src/css/global.css
@@ -15,6 +15,11 @@
   --color-white-alpha-300: rgba(255, 255, 255, 0.3);
   --color-white-alpha-400: rgba(255, 255, 255, 0.4);
   --color-white-alpha-500: rgba(255, 255, 255, 0.5);
+  --color-black-alpha-100: rgba(0, 0, 0, 0.1);
+  --color-black-alpha-200: rgba(0, 0, 0, 0.2);
+  --color-black-alpha-300: rgba(0, 0, 0, 0.3);
+  --color-black-alpha-400: rgba(0, 0, 0, 0.4);
+  --color-black-alpha-500: rgba(0, 0, 0, 0.5);
 
   --breakpoint-3xl: 120rem;
 
