Basic style/content for about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,40 +8,15 @@ import Layout from '../layouts/Layout.astro'
 	currentUrl="/about"
 	bgColor="white"
 >
-	<div class="bg-white text-black">
-		<h1 class="text-3xl font-bold">About</h1>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
-		<p>1234</p>
+	<div class="
+		flex flex-col gap-4 p-4 bg-white text-black m-auto max-w-lg
+		md:p-8
+		xl:p-12 xl:max-w-2xl xl:text-lg
+	">
+		<h1 class="text-3xl font-bold xl:text-4xl">About this site</h1>
+		<p>Explore the actions that have shaped the Palestinian-led, global Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality.</p>
+		<p>Explore the actions that have shaped the Palestinian-led, global Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality.</p>
+		<p>Explore the actions that have shaped the Palestinian-led, global Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality.</p>
+		<p>Explore the actions that have shaped the Palestinian-led, global Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality.</p>
 	</div>
 </Layout>
