--- a/src/css/global.css
+++ b/src/css/global.css
@@ -22,6 +22,7 @@
   --color-black-alpha-500: rgba(0, 0, 0, 0.5);
 
   --breakpoint-3xl: 120rem;
+  --breakpoint-4xl: 160rem;
 
   --font-sans: "effra", sans-serif;
   --font-mono: "JetBrains Mono", monospace;
