Fix: color of chart on individual events page

--- a/src/pages/events/[id].astro
+++ b/src/pages/events/[id].astro
@@ -59,7 +59,7 @@ const targets = getCountryNames(event.data.target, filters.target)
             id: 'all-data',
             hexes: data,
             style: {
-              fill: 'var(--color-chart-dim)',
+              fill: 'var(--color-chart)',
             },
           },
         ]}
