--- a/src/pages/events/[id].astro
+++ b/src/pages/events/[id].astro
@@ -107,7 +107,7 @@ const targets = getCountryNames(event.data.target, filters.target)
               {event.data.headline}
             </a>
           </h1>
-          {country.length && (
+          {!!country.length && (
             <div class="md:text-lg 3xl:text-2xl">
               {event.data.city && (
                 <span>
@@ -129,7 +129,7 @@ const targets = getCountryNames(event.data.target, filters.target)
           {event.data.summary}
         </div>
       </div>
-      {event.data.sources.length && (
+      {!!event.data.sources.length && (
         <div class="flex flex-wrap gap-2 md:text-lg 3xl:text-xl">
           <div class="font-bold uppercase">Details:</div>
           {event.data.sources.map(source => (
