--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,98 +1,202 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Chart from '../components/Chart.vue'
+import HomeChart from '../components/HomeChart.vue'
 import { columns, data, rows, ticks } from '../data/chart-config.json'
-import IconRadioButtonChecked from '../images/icon-radio-button-checked.svg'
 import { astroGetSortedStories } from "../utilities/astro-utilities"
+import SvgHomeTitle from '../images/home-title.svg'
+import SvgUnderline from '../images/underline.svg'
+import SvgUnderlineLg from '../images/underline-lg.svg'
+import SvgVPLogo from '../images/vp-logo.svg'
 
 const stories = await astroGetSortedStories()
 ---
 
 <Layout
-	title="Growth of a Movement: The BDS campaign for Palestinian justice"
+	title="Growth of the BDS Movement for Palestine"
 	description="Explore the actions that have shaped the Palestinian-led Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality."
 	currentUrl="/"
 	bgColor="black"
+	showHeader={false}
 >
-	<div class="bg-black text-white">
-		<div
-			class={`
-				h-32
-				sm:h-40
-				md:h-48
-				lg:h-64
-				2xl:h-80
-				3xl:h-96
+	<div class="text-white">
+		<div class={`
+				relative
+				h-svh
+				grid
+				grid-rows-2
 			`}
 		>
-			<Chart
-				client:only="vue"
-				columns={columns}
-				datasets={[
-					{
-						id: 'all-data',
-						hexes: data,
-					},
-				]}
-				rows={rows}
-				ticks={ticks}
-				showAllYears={false}
-			/>
+			<div
+				class={`
+					absolute
+					top-0
+					bottom-0
+					w-full
+				`}
+			>
+				<HomeChart
+					client:only="vue"
+					columns={columns}
+					datasets={[
+						{
+							id: 'all-data',
+							hexes: data,
+              style: {
+                fill: 'var(--color-chart)',
+              }
+						},
+					]}
+					rows={rows}
+					ticks={ticks}
+				/>
+			</div>
+			<div class="relative px-6 flex flex-col items-center justify-center">
+				<div class="max-w-lg flex flex-col items-center gap-6 md:gap-8 2xl:max-w-2xl 3xl:max-w-4xl">
+					<h1>
+						<span class="sr-only">
+							Growth of a Movement
+						</span>
+						<SvgHomeTitle class="w-full h-auto" aria-hidden="true" />
+					</h1>
+					<p class="text-lg text-center max-w-lg md:text-xl 3xl:max-w-2xl 3xl:text-2xl">
+						Explore the actions that have shaped the Palestinian-led, global <strong>Boycott, Divestment, and Sanctions (BDS)</strong> movement for freedom, justice, and equality.
+					</p>
+				</div>
+			</div>
+			<div class="relative p-6 flex justify-center items-end">
+				<img src="/story-illustration.png" class="w-2/3 lg:w-auto lg:h-3/4" />
+			</div>
 		</div>
 		<section
 			class="
-				mt-4
+				my-32
 				p-4
 				flex
 				flex-col
-				gap-8
-				max-w-6xl
+				gap-4
+				max-w-xl
 				mx-auto
-				md:p-12
-				lg:grid
-				lg:grid-cols-12
-				xl:gap-16
 			"
 		>
-			<div class="lg:col-span-6 xl:col-span-5">
-				<h1 class="sr-only">
-					Growth of a Movement
-				</h1>
-				<p class="text-xl leading-relaxed">Explore the actions that have shaped the Palestinian-led, global Boycott, Divestment, and Sanctions (BDS) movement for freedom, justice, and equality.</p>
-			</div>
+			<h2 class="sr-only" id="stories">Stories</h2>
 			<div
 				class="
 					flex
 					flex-col
-					gap-4
+					gap-8
 					lg:col-span-6
 					xl:col-span-7
 				"
 			>
-				{stories.map(story => (
+				{stories.map((story, i) => (
 					<a
 						href={`/${story.id}`}
-						class="
+						class={`
+							group
+							relative
 							flex
 							items-center
-							gap-3
-							p-3
-							border-2
-							hover:text-yellow
-						"
+							gap-4
+							aspect-[3.2/1]
+							overflow-hidden
+							transition-all
+							bg-blue
+							hover:bg-red
+							hover:-translate-y-1
+							hover:${i % 2 ? '-' : ''}rotate-1
+							md:gap-6
+							xl:aspect-[4/1]
+							xl:gap-8
+						`}
+						style={`clip-path: url(#panel-bg-${i % 2 + 1})`}
 					>
-						<IconRadioButtonChecked class="w-8 h-8" aria-hidden="true" />
-						<div class="flex flex-col">
-							<span class="text-sm leading-tight uppercase">
+						<img
+							src={story.data.illustration}
+							class={`
+								w-2/5
+								self-end
+								-ms-4
+								xl:w-1/3
+								xl:ms-4
+							`}
+						/>
+						<div class="relative top-1 flex flex-col items-start">
+							<span class="text-sm leading-tight uppercase md:text-lg">
 								{story.data.prefix}
 							</span>
-							<span class="text-2xl leading-tight font-black">
+							<span class="relative text-xl leading-tight font-black md:text-3xl">
 								{story.data.title}
+								<SvgUnderlineLg
+									class={`
+										absolute
+										top-full
+										left-0
+										w-full
+										h-0.5
+										text-yellow
+									`}
+									aria-hidden="true"
+								/>
 							</span>
 						</div>
 					</a>
 				))}
 			</div>
 		</section>
+		<footer class={`
+			my-32
+			p-4
+			flex
+			flex-col
+			items-center
+			gap-32
+			max-w-xl
+			mx-auto
+		`}>
+			<a
+				href="/about"
+				class={`
+					relative
+					flex
+					flex-col
+					items-center
+					transition-all
+					hover:-translate-y-1
+					hover:-rotate-2
+					focus-visible:outline-2
+					focus-visible:outline-current
+				`}
+			>
+				<span class="text-sm uppercase font-semibold xl:text-base 2xl:text-lg 3xl:text-xl">
+					About This Site
+				</span>
+				<SvgUnderlineLg
+					class={`
+						absolute
+						top-full
+						left-0
+						right-0
+						w-full
+						h-0.5
+					`}
+					aria-hidden="true"
+				/>
+			</a>
+			<div class={`
+				flex
+				flex-col
+				items-center
+				gap-1
+			`}
+			>
+				<h2 class="text-sm uppercase">
+					Produced By
+				</h2>
+				<a href="https://visualizingpalestine.org">
+					<span class="sr-only">Visualizing Palestine</span>
+					<SvgVPLogo class="w-full" aria-hidden="true" />
+				</a>
+			</div>
+		</footer>
 	</div>
 </Layout>
