Add cut-out shape to story header

--- a/src/pages/[story].astro
+++ b/src/pages/[story].astro
@@ -113,12 +113,14 @@ const conclusion = marked.parse(story.data.conclusion)
         p-4
         bg-blue
         text-white
+        overflow-hidden
         sm:py-6
         xl:px-16
         xl:grid
         xl:grid-cols-12
         3xl:py-12
       "
+      style="clip-path: url(#hero-bottom-cutout)"
     >
       <div
         class="
